--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@
     <title>Link CSS to HTML</title>
 </head>
 <body>
-    hello
+    <div id="cards">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+    </div>
 </body>
